Fix spacing in image form buttons

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -93,7 +93,7 @@ form {
 }
 
 input[type="text"], select,
-textarea {
+textarea, input[type="submit"]  {
   display: inline-block;
   margin-top: -10px;
   width: 100%;
@@ -103,28 +103,34 @@ textarea {
   padding: 0.5em;
 }
 
-input[type="submit"]{
+.btn.btn-primary {
   display: flex;
   margin: auto;
-  background: rgb(166, 185, 249);
-  color: black;
-  border-radius: 15px;
-  padding: 10px;
-}
-
-button.newImageButton.btn.btn-primary,
-#addgoal.btn.btn-primary {
-  display: flex;
-  margin: auto;
-  background: rgb(166, 185, 249);
+  background: rgb(175, 185, 244);
   color: rgb(0, 0, 0);
   border-radius: 10px;
   padding: 10px;
+  margin-top: 20px;
+}
+
+button.closeForm.btn.btn-secondary{
+  display: flex;
+  margin: auto;
+  background: rgb(230, 111, 111);
+  color: rgb(0, 0, 0);
+  border-radius: 10px;
+  padding: 10px;
+  margin-top: 20px;
 }
 
 newImageButton.btn.btn-primary:hover,
-#addgoal.btn.btn-primary:hover, input[type="submit"]:hover {
-  background: rgb(27, 71, 218);
+#addgoal.btn.btn-primary:hover, input[type="submit"]:hover{
+  background: rgb(54, 90, 210);
+  color:rgb(255, 255, 255);
+}
+
+button.closeForm.btn.btn-secondary:hover {
+  background: rgb(173, 35, 35);
   color:rgb(255, 255, 255);
 }
 
@@ -194,8 +200,8 @@ div.stretched.row.bordered {
 
 .form-button-container {
   display: flex;
-  justify-content: space-between;
-  padding: 3%;
+  padding-left: 5%;
+  padding-right: 55%;
 }
 
 .custom-card {
